Tue Feb 27 18:48:03 1996  Theodore Y. Ts'o  <tytso@dcl>

	* hostaddr.c (krb5_os_hostaddr): Use #define NEED_SOCKETS instead
		of #including <netdb.h>  (this breaks under windows).

Mon Feb 26 17:04:26 1996  Theodore Y. Ts'o  <tytso@dcl>

	* promptusr.c: Don't compile promptusr for Windows or Macintosh.

Sat Feb 24 18:57:56 1996  Theodore Y. Ts'o  <tytso@dcl>

	* ktdefname.c (krb5_kt_default_name): Under Windows, assume that
		the keytab file is located in the Windows directory.

Thu Feb 22 13:16:16 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* Makefile.in (check-unix): Set LD_LIBRARY_PATH for kdb5_anadd.

	* hostaddr.c (krb5_os_hostaddr): Set magic number in structure.

	* full_ipadr.c (krb5_make_full_ipaddr): Set magic number in structure.

Sat Feb 17 00:05:38 1996  Theodore Y. Ts'o  <tytso@pao.MIT.EDU>

	* def_realm.c (krb5_get_default_realm): If the configuration file
		does not exist (context->profile == NULL) return
		KRB5_CONFIG_CANTOPEN; if the default realm is not defined
		in the configuration file, return an error message saying
		so.   These changes just make the diagnostic error
		messages more clear.

Thu Jan 11 18:32:54 1996  Ezra Peisach  (epeisach@paris)

	* Makefile.in (check-unix): Ultrix test does not support -x.

Fri Jan  5 09:00:47 1996  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* locate_kdc.c (krb5_locate_kdc): Add parrentheses for assignment
		in conditional. (gcc -Wall)

	* init_os_ctx.c (krb5_os_init_context): Remove unused variables

	* an_to_ln.c (aname_do_match): Initialize local variable before
		referenced. 

Thu Jan  4 22:23:04 1996  Theodore Y. Ts'o  <tytso@dcl>

	* hostaddr.c (krb5_os_hostaddr): New function which takes a
		hostname and returns a list of krb5 addresses.  (This is
		basically a glue routine that converts the result of
		gethostbyname() to krb5 addresses.)

Thu Dec 21 17:51:58 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (t_an_to_ln): Use $(LD) instead of $(CC) to link