@@ -1,3 +1,10 @@
+Thu Feb 29 16:14:46 1996  Theodore Y. Ts'o  <tytso@dcl>
+
+	* sendto_kdc.c (krb5_sendto_kdc): Take out calls to
+		SOCKET_INITIALIZE and SOCKET_CLEANUP.  This gets done in
+		win_glue.c, and we only need to do this once.  (XXX What
+		about Macintosh?)
+
 Tue Feb 27 18:48:03 1996  Theodore Y. Ts'o  <tytso@dcl>
 
 	* hostaddr.c (krb5_os_hostaddr): Use #define NEED_SOCKETS instead
